<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">myTherapy</string>
    <string name="descrizione_logo">myTherapy</string>
    <string name="registrazione">Registrati</string>
    <string name="login">Login</string>
    <string name="login_supervisore">Login Supervisore</string>
    <string name="suggerimento_password">Password</string>
    <string name="suggerimento_conferma_password">Conferma password</string>
    <string name="suggerimento_username">Username</string>
    <string name="footer">Developed by: Everybody Hurts</string>
    <string name="registrati"><u>Non hai un account? Registrati!</u></string>
    <string name="suggerimento_nome">Nome</string>
    <string name="suggerimento_cognome">Cognome</string>
    <string name="suggerimento_email">Email</string>
    <string name="suggerimento_data">Data di nascita</string>
    <string name="registrazione_titolo">Registrazione</string>
    <string name="login_dialog_text">Login in corso</string>
    <string name="avatar">Immagine profilo</string>
    <string name="esempio_nome">Nome Cognome</string>
    <string name="titolo_supervisore_home">I tuoi utenti</string>
    <string name="aggiungi_utenti">Aggiungi utente</string>
    <string name="btn_retry">Riprova</string>
    <string name="empty_screen">Nessun item</string>
    <string name="colorSecondaryText">aylmao</string>
    <string name="logout_text">Logout</string>
    <string name="nessun_item">Nessun utente presente</string>
    <string name="salva_modifiche_utente">Salva le modifiche</string>
    <string name="terapie_utente">Medicine associate all\'utente</string>
    <string name="cancella_utente">Cancella utente corrente</string>
    <string name="timeline_terapia_utente">Timeline della giornata</string>
    <string name="titolo_aggiunta_utente">Aggiungi utente</string>
    <string name="consigli_aggiunta_utente_titolo"> ATTENZIONE</string>
    <string name="consigli_aggiunta_utente_testo">Le informazioni qui inserite verranno utilizzate per la creazione di un account utente che potrà essere assegnato
    ad un paziente.\nPotrai comunque modificare i dati in un qualsiasi momento dalla schermata principale.</string>
    <string name="titolo_user_home">La tua home</string>
    <string name="nome_medicina_uno">Nome medicina 1</string>
    <string name="nome_medicina_due">Nome medicina 2</string>
    <string name="nome_medicina_tre">Nome medicina 3</string>
    <string name="timeline_ora">00:00</string>
    <string name="timeline_ora_uno">Orario</string>
    <string name="timeline_ora_due">Orario</string>
    <string name="timeline_ora_tre">Orario</string>
    <string name="visto_timeline">visto presa medicina</string>
    <string name="inizio_giornata">00:00</string>
    <string name="richiedi_assistenza">Richiedi supporto</string>
    <string name="titolo_stato_terapia">Stato medicina</string>
    <string name="nome_medicina">Medicina test</string>
    <string name="dettagli_nome_medicina_test">Nome medicina test</string>
    <string name="dettagli_medicina">Dettagli medicina</string>
    <string name="segna_preso">Segna come preso</string>
    <string name="segna_rimanda">Rimanda</string>
    <string name="presa">Medicina già presa</string>
    <string name="appunti_medicina">Dettagli aggiunti dal supervisore per la medicina</string>
    <string name="descrizione_descrizione">DESCRIZIONE</string>
    <string name="esempio_dettagli">Esempio dettagli per medicina</string>
    <string name="assunzione_e_dosaggio">ASSUNZIONE E DOSAGGIO</string>
    <string name="consigli_e_raccomandazioni">CONSIGLI E RACCOMANDAZIONI</string>
    <string name="link_utili">LINK UTILI</string>
    <string name="dosaggio_corrente">DOSAGGIO CORRENTE</string>
    <string name="chiudi">X</string>
    <string name="forward_slash">/</string>
    <string name="titolo_aggiunta_modifica_medicina">Dettagli medicina</string>
    <string name="suggerimento_nome_medicina">Nome medicina</string>
    <string name="suggerimento_descrizione_medicina">Descrizione generica</string>
    <string name="assunzione_e_dosaggio_medicina">Assunzione e dosaggio standard</string>
    <string name="link_utili_medicina">Link utili per il paziente</string>
    <string name="dosaggio_corrente_medicina">Assegna un dosaggio</string>
    <string name="imposta_la_frequenza_per_la_terapia">Imposta la frequenza per la terapia</string>
    <string name="aggiungi_terapia">Aggiungi la terapia</string>
    <string name="attiva_notifiche_terapia_checkbox">Attiva notifiche per questa terapia</string>
    <string name="quale_terapia_domanda">Con quale delle terapie hai un problema?</string>
    <string name="dettagli_terapia_domanda">Che problema si verifica?</string>
    <string name="consigli_paziente">Consigli per il paziente</string>
    <string name="orario">Orario</string>
    <string name="nessuna_terapia">Nessuna medicina presente.</string>
    <string name="ora_test">16:00</string>
</resources>
