<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SupervisorLoginActivity"
    tools:ignore="Labelfor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="47dp" />

        <ImageView
            android:layout_width="403dp"
            android:layout_height="107dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/descrizione_logo"
            android:src="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suggerimento_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/supervisore_login_username"
                android:layout_width="match_parent"
                android:layout_height="70sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/supervisore_password_input_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suggerimento_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/supervisore_login_password"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@."
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:id="@+id/login_button_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:columnCount="1"
            android:paddingTop="15sp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/supervisore_login_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_supervisore"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <TextView
                android:id="@+id/registrati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrati"
                android:textAlignment="center"
                android:textSize="16sp" />

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14sp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:text="@string/footer"
            android:textAlignment="center" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>