<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity"
    tools:ignore="Labelfor" >

    <LinearLayout
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="47dp" />

        <ImageView
            android:layout_width="403dp"
            android:layout_height="107dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/descrizione_logo"
            android:src="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suggerimento_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="70sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password_input_toggle"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suggerimento_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="70sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:id="@+id/login_button_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:columnCount="1"
            android:paddingTop="15sp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:text="@string/login"
                android:textSize="18sp" />

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="14sp"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/login_supervisore_grid"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:paddingTop="15sp"
            android:clipToPadding="false"
            android:columnCount="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_supervisore_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/login_supervisore"
                android:textSize="18sp" />

        </GridLayout>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:textAlignment="center"
            android:text="@string/footer" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>