<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/bg_key"
    android:clipToPadding="false">

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:background="@color/colorAccent" />

    <View
        android:id="@+id/timeline_dot"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        android:background="@drawable/dot" />

    <TextView
        android:id="@+id/timeline_ora_medicina"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/timeline_dot"
        android:gravity="center"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/timeline_ora_tre" />

    <TextView
        android:id="@+id/timeline_nome_medicina"
        android:layout_width="245dp"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_toEndOf="@id/timeline_ora_medicina"
        android:gravity="center"
        android:paddingLeft="15sp"
        android:paddingRight="10sp"
        android:text="@string/nome_medicina_tre"
        android:textColor="@color/cardview_dark_background"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="PrivateResource,RtlHardcoded" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25sp"
        android:layout_toEndOf="@id/timeline_nome_medicina"
        android:contentDescription="@string/visto_timeline"
        android:src="@drawable/timeline_not_done" />


</RelativeLayout>

