<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Labelfor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24sp"
        android:paddingTop="20sp"
        android:paddingRight="24sp"
        android:paddingBottom="24sp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/home_supervisore_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="ExtraText">

                <TextView
                    android:id="@+id/titolo_supervisore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:text="@string/titolo_supervisore_home"
                    android:textSize="48sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/supervisore_logout_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="@id/titolo_supervisore"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15sp"
                    android:height="48sp"
                    android:text="@string/logout_text"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="1sp"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

            </RelativeLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="250sp" />

            <!-- Start material card -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nessun_item"
                android:textSize="24sp" />

            <!-- End material card -->

            <!-- Spazio per evitare che il bottone copra l'ultimo item -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />


        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="@color/statusBarColor"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <GridLayout
            android:id="@+id/home_supervisore_grid"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:layout_marginBottom="1sp"
            android:clipToPadding="false"
            android:columnCount="1"
            android:paddingTop="5sp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/aggiungi_utenti_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/aggiungi_utenti"
                android:textSize="18sp" />

        </GridLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>